--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
+    "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
